--- a/.env.production
+++ b/.env.production
@@ -5,7 +5,7 @@ PORT=5000
 NODE_ENV=production
 
 # MongoDB Atlas connection string (create free cluster at mongodb.com/cloud/atlas)
-MONGODB_URI=mongodb+srv://username:password@cluster0.xxxxx.mongodb.net/bicycle-negotiation-game?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://sarinajaninaa_db_user:<JuJu.Inu@cluster0.xxxxx.mongodb.net/bicycle-negotiation-game?retryWrites=true&w=majority
 
 # Your Render app URL (will be provided after first deploy)
 CLIENT_URL=https://bicycle-negotiation-game.onrender.com
