--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,13 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "socket.io": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "exceljs": "^4.4.0",
-    "nanoid": "^5.0.4"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3",
+    "nanoid": "^5.0.4",
+    "socket.io": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
